--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,39 @@
-<!-- index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Captioning App</title>
+    <title>Image Captioner - Generate Captions for Your Images</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/style.css') }}">
 </head>
 <body>
-    <h1>Image Captioning App</h1>
-    <form action="/upload" method="post" enctype="multipart/form-data">
-        <input type="file" name="file" accept=".jpg, .jpeg, .png" required>
-        <button type="submit">Upload</button>
-    </form>
-    {% if image_path %}
-        <img src="{{ image_path }}" alt="Uploaded Image" style="max-width: 500px;">
-        <br>
-        <p><strong>Predicted Caption:</strong><br>{{ predicted_caption }}</p>
-    {% endif %}
-    {% if error %}
-        <p style="color: red;">{{ error }}</p>
-    {% endif %}
+    <header>
+        <h1>Image Captioner</h1>
+        <p>Bring your images to life with AI-powered captions.</p>
+    </header>
+    <main>
+        <section class="upload-form">
+            <h2>Upload your image:</h2>
+            <form action="/upload" method="post" enctype="multipart/form-data">
+                <label for="file-upload" class="file-label">
+                    <span>Choose a file</span>
+                    <input type="file" id="file-upload" name="file" accept=".jpg, .jpeg, .png" required>
+                </label>
+                <button type="submit">Generate Caption</button>
+            </form>
+            {% if error %}
+                <p class="error">{{ error }}</p>
+            {% endif %}
+        </section>
+        <section class="result">
+            {% if image_path %}
+                <img src="{{ image_path }}" alt="Uploaded Image" class="uploaded-image">
+                <p class="predicted-caption"><strong>Predicted Caption:</strong><br>{{ predicted_caption }}</p>
+            {% endif %}
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 ImageCaption &trade;</p>
+    </footer>
 </body>
 </html>
